--- a/style.css
+++ b/style.css
@@ -40,9 +40,7 @@
     background: linear-gradient(
       to bottom,
       rgba(07, 07, 07, 1) 0%,
-      rgba(07, 07, 07, 0.9) 30%, 
-
-      rgba(07, 07, 07, 0.6) 60%,
+    
       rgba(07, 07, 07, 0) 100%
     );
     display: flex;
@@ -50,7 +48,7 @@
     width: 100%;
  padding-left: 0.5rem;
 padding-right: 0.5rem;  
-height: 5rem; 
+height: 3rem; 
 
   }
 
@@ -60,11 +58,10 @@ height: 5rem;
     background: linear-gradient(
       to top,
       rgba(07, 07, 07, 1) 0%,
-      rgba(07, 07, 07, 0.9) 30%, 
-
-      rgba(07, 07, 07, 0.6) 60%,
+     
       rgba(07, 07, 07, 0) 100%
-    );    height: 5rem; 
+    );    
+    height: 3rem; 
     bottom: 0;  
   }
 
