--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@
   header {
     background: linear-gradient(
       to bottom,
-      rgba(07, 07, 07, 1) 0%,
+      rgba(7, 7, 7, 1) 0%,
     
-      rgba(07, 07, 07, 0) 100%
+      rgba(7, 7, 7, 0) 100%
     );
     display: flex;
     position: fixed;
@@ -66,9 +66,9 @@ height: 3rem;
     width: 100%;
     background: linear-gradient(
       to top,
-      rgba(07, 07, 07, 1) 0%,
+      rgba(7, 7, 7, 7) 0%,
      
-      rgba(07, 07, 07, 0) 100%
+      rgba(7, 7, 7, 0) 100%
     );    
     height: 3rem; 
     bottom: 0;  
@@ -84,6 +84,7 @@ height: 3rem;
   padding-right: 1rem;   
 right: 0; 
     gap: 0.3rem;
+    z-index: 1000;
   }
 
   header ol a {
@@ -91,6 +92,7 @@ right: 0;
 text-align: right; 
 font-weight: bolder;
 font-size: 0.9rem;
+z-index: 1000;
   }
 
     /* hero */
