--- a/style.css
+++ b/style.css
@@ -32,23 +32,29 @@
     scroll-behavior: smooth;
 
   }
+ 
 
   .fade-up {
     opacity: 0;
     transform: translateY(100px);
     transition: opacity 0.6s ease-out, transform 1s ease-out;
   }
+
+
   
   .fade-up.visible {
     opacity: 1;
     transform: translateY(0);
   }
+
+
   /* header */
 
   header {
     background: linear-gradient(
       to bottom,
       rgba(7, 7, 7, 1) 0%,
+
     
       rgba(7, 7, 7, 0) 100%
     );
@@ -58,7 +64,7 @@
  padding-left: 0.5rem;
 padding-right: 0.5rem;  
 height: 3rem; 
-
+z-index: 1000;
   }
 
   footer {
@@ -70,6 +76,8 @@ height: 3rem;
      
       rgba(7, 7, 7, 0) 100%
     );    
+    z-index: 1000;
+
     height: 3rem; 
     bottom: 0;  
   }
