--- a/style.css
+++ b/style.css
@@ -60,9 +60,11 @@
     );
     display: flex;
     position: fixed;
-    width: 100%;
- padding-left: 0.5rem;
-padding-right: 0.5rem;  
+margin-left: auto;
+margin-right: auto;
+width: 100%;  
+ padding-left: 1rem;
+padding-right: 1rem;  
 height: 3rem; 
 z-index: 1000;
   }
@@ -83,14 +85,11 @@ z-index: 1000;
   }
 
   header ol {
-    margin-left: auto;
     display: flex;
     flex-direction: column;
-    position: fixed;
     padding-left: 1rem;
     padding-top: 1rem; 
-  padding-right: 1rem;   
-right: 0; 
+    margin-left: auto;
     gap: 0.3rem;
     z-index: 1000;
   }
@@ -185,7 +184,7 @@ z-index: 1000;
 
 }
 .moto-section  h1{
-  font-size: 4.9rem; 
+  font-size: 4.3rem; 
   line-height: 0.9;
   padding-left: 1rem;
   padding-right: 1rem; 
@@ -351,4 +350,14 @@ row-gap: 1rem;
       font-size: 0.8rem; 
       line-height: 1.4rem;
       font-weight: bold;
+    }
+
+    @media (min-width: 400px) {
+      .moto-content  h1{
+        font-size: 5rem; 
+        line-height: 0.9;
+        padding-left: 1rem; 
+        padding-right: 1rem; 
+        
+      }
     }
