--- a/style.css
+++ b/style.css
@@ -156,12 +156,20 @@ z-index: 1000;
 }
 
 .introduction-section p {
+  padding-top: 2rem;
+
   font-weight: bolder;
   padding-left: 1rem;
   line-height: 1.5rem;
   padding-right: 1rem;
 }
-
+.introduction-content img {
+  width: 100%;
+  }
+  
+  .writing-image {
+    flex: 1;
+  }
 .introduction-content  {
   display: flex;
   gap: 2rem;
@@ -403,6 +411,38 @@ row-gap: 1rem;
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+          
+
+
+
+
+
     @media (min-width: 1000px) {
      * {
       cursor: none;
@@ -445,7 +485,7 @@ row-gap: 1rem;
 /* Optional, adjust as needed *//* Optional, adjust as needed *//* Optional, adjust as needed */
       header ol a {
    
-    font-size: 2.5rem;
+    font-size: clamp(1.5rem, 2vw, 4rem);
     color: #7a7367;
     transition: color 0.3s ease; 
 
@@ -486,7 +526,7 @@ color: #B7AB98;          }
 
 
       .hero-section h1 {
-        font-size: 10.9rem; 
+        font-size: clamp(3.5rem, 7vw, 10.8rem); 
         line-height: 0.9;
        
       }
@@ -503,20 +543,24 @@ color: #B7AB98;          }
 
           .introduction-section {
             padding-top: 0 ;
-          
-            
+            display: flex;
+             
           
           }
 
 
           .introduction-content  {
-            display: flex;
-            gap: 2rem; 
 flex-direction: row;          }
 
 .introduction-content img {
-  flex: 1; 
+width: 100%;
 }
+
+.writing-image {
+  flex: 1;
+}
+
+
 .introduction-writing  {
   flex: 1; 
   padding-top: 10rem; 
@@ -525,14 +569,14 @@ flex-direction: row;          }
 
 
 .introduction-section h1  {
-  font-size: 14.9rem; 
+  font-size: clamp(3.5rem, 6vw, 10.8rem); 
   padding-left: 5rem;
 }
 
 .introduction-section p {
   font-weight: bolder;
   padding-left: 5rem;
-  font-size: 2rem;
+  font-size: clamp(1rem, 2vw, 2rem);  
   line-height: 3rem;
   padding-top: 4rem; 
 }
@@ -560,7 +604,7 @@ flex-direction: row;          }
           
           }
           .moto-section  h1{
-            font-size: 14.3rem; 
+            font-size: clamp(1rem, 9vw, 14rem);  
             padding-left: 15rem;
             
           }
@@ -573,7 +617,8 @@ flex-direction: row;          }
            
             background-image: url(./imgs/Desktop-youngman.jpg);
          
-      padding-left: 5rem; 
+      padding-left: 15rem; 
+      padding-right: 15rem; 
   
           }
 
@@ -599,7 +644,7 @@ flex-direction: row;          }
       
           .reason-content p {
             font-weight: bolder;
-            font-size: 8.7rem;
+            font-size: clamp(1rem, 4vw, 15rem); 
             line-height: 8.5rem; 
       
           }
@@ -617,7 +662,7 @@ flex-direction: row;          }
 
 
           .writing-content p {
-            font-size: 8.9rem; 
+            font-size: clamp(3rem, 6vw, 16rem); 
             line-height: 0.9; 
             width: 85%;
             margin-inline: auto;
