--- a/style.css
+++ b/style.css
@@ -599,9 +599,10 @@ width: 100%;
 
 
           .moto-content h3 {
-            font-size: 0.9rem; 
+            font-size: clamp(1rem, 1vw, 14rem); 
             color: #EB3939;
-          
+            padding-left: 15rem;
+
           }
           .moto-section  h1{
             font-size: clamp(1rem, 9vw, 14rem);  
